--- a/index.html
+++ b/index.html
@@ -45,29 +45,30 @@
             </td>
           </tr>
         </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>News</heading>
-              <ul>
-		<li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>	      
-		<li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <em>IEEE TPAMI<em>.</li>		      
-		<li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
-		<li><b>[<font color="red">2023.09</font>]</b> I am visiting A*STAR for 18 months.</li>
-		<li><b>[<font color="red">2023.07</font>]</b> I was awarded CSC Scholarship.</li>
-              	<li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>
-	      	<li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
-	      	<li><b>[<font color="red">2022.11</font>]</b> Two papers have been accepted by <em>AAAI</em> 2023.</li>
-	      	<li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>
-	      	<li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>ACMMM</em> 2022.</li>
-	      	<li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>		      
-	      	<li><b>[<font color="red">2021.12</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>
-	      	<li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>		    
-	      	<li><b>[<font color="red">2020.10</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>		      
-              </ul>
-            </td>
-          </tr>
-        </tbody></table>
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr>
+      <td style="padding:20px;width:100%;vertical-align:middle">
+        <heading>News</heading>
+        <ul>
+          <li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
+          <li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <span>IEEE TPAMI</span>.</li>		      
+          <li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
+          <li><b>[<font color="red">2023.09</font>]</b> I am visiting A*STAR for 18 months.</li>
+          <li><b>[<font color="red">2023.07</font>]</b> I was awarded CSC Scholarship.</li>
+          <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>
+          <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
+          <li><b>[<font color="red">2022.11</font>]</b> Two papers have been accepted by <span>AAAI</span> 2023.</li>
+          <li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>
+          <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <span>ACMMM</span> 2022.</li>
+          <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>		      
+          <li><b>[<font color="red">2021.12</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>
+          <li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>		    
+          <li><b>[<font color="red">2020.10</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>		      
+        </ul>
+      </td>
+    </tr>
+  </tbody></table>
+
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
