--- a/index.html
+++ b/index.html
@@ -371,9 +371,12 @@
               <br>
               <em>IEEE T-NNLS(<font color="red">CCF-B, IF: 10.4</font>)</em>, 2024
               <br>
-              <a href="https://arxiv.org/pdf/2202.12533">Paper</a>
+              <a href="https://arxiv.org/pdf/2202.12533">[IEEE Xplore]</a>
               /
-              <a href="https://github.com/yueliu1999/IDCRN">Code</a>
+              <a href="https://arxiv.org/pdf/2202.12533">[pdf]</a>
+              /
+              <a href="https://github.com/yueliu1999/IDCRN">[Code]</a>
+              /
               <p></p>
               <p style="text-align:justify">
                   We explore deep-in reasons of representation collapse in deep graph clustering and improve the dual correlation reduction network with the affinity recovery strategy.
