--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
-          <li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
+          <li><b>[<font color="red">2024.07</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
+  	  <li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
           <li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <span>IEEE TPAMI</span>.</li>		      
           <li><b>[<font color="red">2024.01</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
           <li><b>[<font color="red">2023.09</font>]</b> I am visiting A*STAR for 18 months.</li>
@@ -333,7 +334,7 @@
 	      <strong>Liang Li(Co-first author)</strong>,
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>
               <br>
-              <em>Minor Revision </em>, 2023
+              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 10.4</font>) </em>, 2024
               <br>
               <a href="https://ieeexplore.ieee.org/document/9830658">[IEEE Xplore]</a>
               /
@@ -342,7 +343,7 @@
               <a href="https://github.com/liliangnudt/MVBGC-NFF">[Code]</a>
               <p></p>
               <p style="text-align:justify">
-                We propose an elegant diverse kernel partition fusion method to get the optimal partition.
+                We propose an elegant diverse kernel partition fusion framework to get the optimal partition.
               </p>
             </td>
           </tr>
