--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>Reinforced Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>Generalized ab Initio Refinement for Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
+	      <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
               <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
