--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
+	  <li><b>[<font color="red">2024.11</font>]</b> I won the China National Scholarship (top 0.2%).</li>
           <li><b>[<font color="red">2024.07</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
   	  <li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
           <li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <span>IEEE TPAMI</span>.</li>		      
@@ -489,6 +490,7 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
+		<li>National Scholarship, 2024.</li>
 		<li>CSC Scholarship, 2023.</li>	    
                 <li>National Scholarship, 2022.</li>
 		<li>First Prize of Postgraduate Academic Scholarship, 2021.</li>
