--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
             <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, Neurocomputing, DSP</li>
-            <li>Reviewer for NeurIPS24, ICLR25, AITATS25, ACM MM24/23, AAAI24/23, PRCV22</li>
+            <li>Reviewer for ICML25, NeurIPS24, ICLR25, AITATS25, ACM MM24/23, AAAI24/23, PRCV22</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
