--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>Generalized ab Initio Refinement for Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>Generalized Probabilistic Graphical Modeling for Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
