--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
+	  <li><b>[<font color="red">2025.2</font>]</b> One paper has been accepted by ICDE Poster Track.</li>
 	  <li><b>[<font color="red">2024.11</font>]</b> I won the China National Scholarship (top 0.2%).</li>
           <li><b>[<font color="red">2024.07</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
   	  <li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
@@ -170,7 +171,7 @@
 		    <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>,
 		    <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>IEEE TKDE (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2024
+              <em>IEEE TKDE/ICDE Poster Track (<font color="red">CCF-A, IF: 8.9</font>)</em>, 2024
               <br>
               <a href="https://ieeexplore.ieee.org/document/10423800">[IEEE Xplore]</a>
               /
