--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul>
 	  <li><b>[<font color="red">2025.03</font>]</b> Awarded a Singapore Patent 🇸🇬.</li>
 	  <li><b>[<font color="red">2025.02</font>]</b> One paper has been accepted by ICDE Poster Track.</li>
-	  <li><b>[<font color="red">2024.11</font>]</b> I won the China National Scholarship (top 0.2%).</li>
+	  <li><b>[<font color="red">2024.11</font>]</b> I won the China National Scholarship (top 0.2%) 🇨🇳.</li>
           <li><b>[<font color="red">2024.07</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
   	  <li><b>[<font color="red">2024.05</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
           <li><b>[<font color="red">2024.03</font>]</b> I serve as a reviewer for <span>IEEE TPAMI</span>.</li>		      
@@ -62,11 +62,11 @@
           <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>
           <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
           <li><b>[<font color="red">2022.11</font>]</b> Two papers have been accepted by <span>AAAI</span> 2023.</li>
-          <li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>
+          <li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%) 🇨🇳.</li>
           <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <span>ACMMM</span> 2022.</li>
           <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>		      
           <li><b>[<font color="red">2021.12</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>
-          <li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>		    
+          <li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%) 🇨🇳.</li>		    
           <li><b>[<font color="red">2020.10</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>		      
         </ul>
       </td>
