--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
             <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, Neurocomputing, DSP</li>
-            <li>Reviewer for ICML25, NeurIPS24, ICLR25, ACL25, AITATS25, IJCAI25, ACM MM24/23, AAAI24/23, PRCV22</li>
+            <li>Reviewer for ICML25, NeurIPS24/25, ICLR25, ACL25, AITATS25, IJCAI25, ACM MM24/23/25, AAAI24/23, PRCV22</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
