--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
               <p style="text-align:justify">Li Liang(李亮) is a Ph.D. student at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China since 2021. 
                 He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Liu Xinwang</a>. 
-		He is also a joint Ph.D. student at <a href="https://www.a-star.edu.sg/">A*STAR, co-supervised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>, and works in close collaboration with Dr. Pan Yuangang. 
+		He is also a joint Ph.D. student at <a href="https://www.a-star.edu.sg/">A*STAR</a>, co-supervised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>. 
 		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, bioinformatics, and self-supervised learning. 
 		Any discussions or concerns are welcomed! Please contact me via e-mail:liliang1037@gmail.com
