--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
               </p>
             </td>
           </tr>	
+<!--------------------------------------------------------------------------------------------------------------------------->
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -152,7 +153,7 @@
               </p>
             </td>
           </tr>		
-		<!--------------------------------------------------------------------------------------------------------------------------->
+<!--------------------------------------------------------------------------------------------------------------------------->
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -322,6 +323,36 @@
             </td>
           </tr>
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/JetBGC.PNG' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>Generalized Probabilistic Graphical Modeling for Multi-view Bipartite Graph Clustering</papertitle>
+              </a>
+              <br>
+              <strong>Liang Li</strong>,
+	      <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
+              <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
+              <br>
+              <em>Preprint </em>, 2024
+              <br>
+              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              /
+              <a href="https://github.com/liliangnudt/G-DNO">Code</a>
+              <p></p>
+              <p style="text-align:justify">
+                We propose a reinforced multi-view bipartite graph clustering.
+              </p>
+            </td>
+          </tr>	
 <!--------------------------------------------------------------------------------------------------------------------------->
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
