--- a/index.html
+++ b/index.html
@@ -332,24 +332,21 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>Generalized Probabilistic Graphical Modeling for Multi-view Bipartite Graph Clustering</papertitle>
+                <papertitle>A Method for Ranking Homogenous RNA (Singapore Patent)</papertitle>
               </a>
               <br>
-              <strong>Liang Li</strong>,
+
 	      <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
-              <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
-              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
-              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
-              <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
+	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,	
+	      <strong>Liang Li</strong>,
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
+              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>,
+              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>		    
               <br>
-              <em>Preprint </em>, 2024
+              <em>Singapore Patent </em>, 2025
               <br>
-              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
-              /
-              <a href="https://github.com/liliangnudt/G-DNO">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a reinforced multi-view bipartite graph clustering.
               </p>
             </td>
           </tr>	
