--- a/index.html
+++ b/index.html
@@ -91,8 +91,69 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 <!--------------------------------------------------------------------------------------------------------------------------->
 
-		<!--------------------------------------------------------------------------------------------------------------------------->
 <!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/RNA.jpg' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>HomRank: Homogeneous RNA Ranking for 3D Structure Evaluation.</papertitle>
+              </a>
+              <br>
+              <strong>Liang Li</strong>,
+	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,	
+              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>		    
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>		    
+              <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
+              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>,
+              <br>
+              <em>Preprint </em>, 2025
+              <br>
+<!--               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a> -->
+              /
+<!--               <a href="https://github.com/liliangnudt/G-DNO">Code</a> -->
+              <p></p>
+              <p style="text-align:justify">
+<!--                 We propose a reinforced multi-view bipartite graph clustering. -->
+              </p>
+            </td>
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/RNA.jpg' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>RNA 3D Structure Scoring Function Conditioned on RNA Foundation Model.</papertitle>
+              </a>
+              <br>
+              <strong>Liang Li</strong>,
+	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,	
+              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>		    
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>		    
+              <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
+              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>,
+              <br>
+              <em>Preprint </em>, 2025
+              <br>
+<!--               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a> -->
+              /
+<!--               <a href="https://github.com/liliangnudt/G-DNO">Code</a> -->
+              <p></p>
+              <p style="text-align:justify">
+<!--                 We propose a reinforced multi-view bipartite graph clustering. -->
+              </p>
+            </td>
+          </tr>	<!--------------------------------------------------------------------------------------------------------------------------->
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
