--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>		    
               <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
-              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>,
+              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>
               <br>
               <em>Preprint </em>, 2025
               <br>
 <!--               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a> -->
-              /
+<!--               / -->
 <!--               <a href="https://github.com/liliangnudt/G-DNO">Code</a> -->
               <p></p>
               <p style="text-align:justify">
@@ -141,12 +141,12 @@
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>		    
               <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
-              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>,
+              <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>
               <br>
               <em>Preprint </em>, 2025
               <br>
 <!--               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a> -->
-              /
+<!--               / -->
 <!--               <a href="https://github.com/liliangnudt/G-DNO">Code</a> -->
               <p></p>
               <p style="text-align:justify">
