--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
               <br>
               <strong>Liang Li</strong>,
 	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,	
-              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>		    
+              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
-              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>		    
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>,		    
               <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
               <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>
@@ -136,9 +136,9 @@
               <br>
               <strong>Liang Li</strong>,
 	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,	
-              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>		    
+              <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
-              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>		    
+              <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>,		    
               <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
               <a href="https://www.a-star.edu.sg/gis/our-people/faculty-staff/members/mile-sikic">Mile Sikic</a>
