--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,	
               <a href="https://scholar.google.com/citations?user=F3QgoxMAAAAJ&hl=en">Ivona Martinovic</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://lmomoy.github.io/">Moyun Liu</a>,
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Mandar Kulkarni</a>,		    
               <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
               <a href="https://www.a-star.edu.sg/bii/research/bsfd/fsrna">Roland Huber</a>,
