--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <heading>News</heading>
         <ul>
 	  <li><b>[<font color="red">2025.03</font>]</b> Awarded a Singapore Patent 🇸🇬.</li>
+	  <li><b>[<font color="red">2025.03</font>]</b> My visit at A*STAR has come to an end. I’m grateful to everyone! 🇸🇬.</li>
 	  <li><b>[<font color="red">2025.02</font>]</b> One paper has been accepted by ICDE Poster Track.</li>
 	  <li><b>[<font color="red">2024.11</font>]</b> I won the China National Scholarship (top 0.2%) 🇨🇳.</li>
           <li><b>[<font color="red">2024.07</font>]</b> One paper has been accepted by <span>IEEE TNNLS</span>.</li>	      
