--- a/index.html
+++ b/index.html
@@ -572,6 +572,7 @@
             <ul>
             <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, Neurocomputing, DSP</li>
             <li>Reviewer for ICML25, NeurIPS24/25, ICLR25, ACL25, AITATS25, IJCAI25, ACM MM24/23/25, AAAI24/23, PRCV22</li>
+            <li>Student member for IEEE, CSIG</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
@@ -584,6 +585,7 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
+		<li>Outstanding Student of NUDT, 2024.</li>
 		<li>National Scholarship, 2024.</li>
 		<li>CSC Scholarship, 2023.</li>	    
                 <li>National Scholarship, 2022.</li>
