--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
+	  <li><b>[<font color="red">2025.06</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> Awarded a Singapore Patent 🇸🇬.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> My visit at A*STAR has come to an end. I’m grateful to everyone! 🇸🇬.</li>
 	  <li><b>[<font color="red">2025.02</font>]</b> One paper has been accepted by ICDE Poster Track.</li>
@@ -203,7 +204,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>Preprint </em>, 2023
+              <em>IEEE TKDE (<font color="red">CCF-A, IF: 10.4</font>)</em>, 2025
               <br>
               <a href="https://ieeexplore.ieee.org/document/10109823">[IEEE Xplore]</a>
               /
