--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
               <a href="https://github.com/liliangnudt/Jet-BGC">[Code]</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a novel Jet-BGC model that integrating embedding learning and Structural Fusion.
+                We revisit the consistency and specificity of LRP and LLP, and design a new unified structural fusion strategy to integrate both linear and locally linear
+structures from a global perspective.
               </p>
             </td>
           </tr>		
