--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <name>Li Liang</name>
               </p>
 
-              <p style="text-align:justify">Li Liang(李亮) received Ph.D. degree in computer science at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China in 2025. 
+              <p style="text-align:justify">Li Liang(李亮) received the Ph.D. degree in computer science at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China in 2025. 
                 He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Liu Xinwang</a>. 
-		He is also a joint Ph.D. student at <a href="https://www.a-star.edu.sg/">A*STAR</a>, co-supervised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>. 
-		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
+		He is also a joint Ph.D. student at <a href="https://www.a-star.edu.sg/">A*STAR</a>, supervised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>. 
+		Before that, he received the M.S. degree from NUDT in 2020, and got the B.S. degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, AI4S, and graph learning. 
-		Any discussions or concerns are welcomed! Please contact me via e-mail:liliang1037@gmail.com
+		Any discussions are welcomed! Please contact me via e-mail:liliang1037@gmail.com
               </p>
 
               <p style="text-align:center">
