--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ structures from a global perspective.
             <ul>
             <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, Neurocomputing, DSP</li>
             <li>Reviewer for ICML25, NeurIPS24/25, ICLR25, ACL25, AITATS25, IJCAI25, ACM MM24/23/25, AAAI24/23, PRCV22</li>
-            <li>Student member for IEEE, CSIG</li>
+            <li>Student member for IEEE, CSIG, CCF</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
