--- a/index.html
+++ b/index.html
@@ -557,7 +557,23 @@ structures from a global perspective.
               </p>
             </td>
           </tr>	
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Experience</heading>
+            </td>
+          </tr>
+        </tbody></table>
 
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+            <ul>
+	    <li>Ph.D of Computer Science @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology</a>, advised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a></li>
+	    <li>Visiting Ph.D of Computer Science @ <a href="https://www.a-star.edu.sg/">A*STAR</a>, advised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a></li>            
+	    <li>Master of Engineering @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology</a></li>
+            <li>Bachelor of Engineering @ <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a></li>
+            </ul>
+        </table>
 <!--------------------------------------------------------------------------------------------------------------------------->
 
 <!--Service-->
