--- a/index.html
+++ b/index.html
@@ -559,12 +559,15 @@ structures from a global perspective.
           </tr>	
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
+        </tbody></table>
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
               <heading>Experience</heading>
             </td>
           </tr>
         </tbody></table>
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
 
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
