--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 <name>Li Liang</name>
               </p>
 
-              <p style="text-align:justify">Li Liang(李亮) received the Ph.D. degree in computer science at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China in 2025. 
-                He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Liu Xinwang</a>. 
+              <p style="text-align:justify">Li Liang(李亮) received the Ph.D. degree in computer science at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a> in 2025, supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Liu Xinwang</a>. 
 <!-- 		He is also a joint Ph.D. student at <a href="https://www.a-star.edu.sg/">A*STAR</a>, supervised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>.  -->
 <!-- 		Before that, he received the M.S. degree from NUDT in 2020, and got the B.S. degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China. -->
 		His research interests include machine learning, AI4S, and graph learning. 
