--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ structures from a global perspective.
 <!--------------------------------------------------------------------------------------------------------------------------->
 
 <!--Service-->
-        </tbody></table>
+        </table>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
