--- a/index.html
+++ b/index.html
@@ -570,9 +570,9 @@ structures from a global perspective.
 
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-	    <li>Ph.D of Computer Science @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology</a>, advised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a></li>
+	    <li>Ph.D of Computer Science @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, advised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a></li>
 	    <li>Visiting Ph.D of Computer Science @ <a href="https://www.a-star.edu.sg/">A*STAR</a>, advised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a></li>            
-	    <li>Master of Engineering @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology</a></li>
+	    <li>Master of Engineering @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a></li>
             <li>Bachelor of Engineering @ <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a></li>
             </ul>
         </table>
