--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ structures from a global perspective.
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
-        </tbody></table>
+<!--         </tbody></table> -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -571,7 +571,7 @@ structures from a global perspective.
 
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-	    <li>Ph.D of Computer Science @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, advised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a></li>
+	    <li>Ph.D of Computer Science @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, advised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Li Keqin</a> and <a href="https://xinwangliu.github.io/">Xinwang Liu</a></li>
 	    <li>Visiting Ph.D of Computer Science @ <a href="https://www.a-star.edu.sg/">A*STAR</a>, advised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a></li>            
 	    <li>Master of Engineering @ <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a></li>
             <li>Bachelor of Engineering @ <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a></li>
@@ -579,7 +579,7 @@ structures from a global perspective.
         </table>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
-        </tbody></table>
+<!--         </tbody></table> -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -594,7 +594,7 @@ structures from a global perspective.
             <li>Student member for IEEE, CSIG, CCF</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
-        </tbody></table>
+<!--         </tbody></table> -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
