--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <!-- 		He is also a joint Ph.D. student at <a href="https://www.a-star.edu.sg/">A*STAR</a>, supervised by Prof. <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>.  -->
 <!-- 		Before that, he received the M.S. degree from NUDT in 2020, and got the B.S. degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China. -->
 		His research interests include machine learning, AI4S, and graph learning. 
-		Any discussions are welcomed! Please contact me via e-mail:liliang1037@gmail.com
+<!-- 		Any discussions are welcomed! -->
+		Please contact me via e-mail:liliang1037@gmail.com
               </p>
 
               <p style="text-align:center">
