--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://github.com/liliangnudt/">Github</a> &nbsp/&nbsp
                 <a href="https://www.researchgate.net/profile/Liang-Li-153?ev=hdr_xprf">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://orcid.org/0000-0002-8116-0668">OCRID</a> &nbsp/&nbsp
-                <a href="https://twitter.com/LiangLi_NUDT/">Twitter</a> &nbsp/&nbsp		      
+<!--                 <a href="https://twitter.com/LiangLi_NUDT/">Twitter</a> &nbsp/&nbsp		       -->
                 <a href="images/LiangWchat.png">Wechat</a> 		      
               </p>
             </td>
