--- a/index.html
+++ b/index.html
@@ -199,22 +199,25 @@
               </a>
               <br>
               <strong>Liang Li</strong>,
+	      <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,
+              <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
               <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 10.4</font>)</em>, 2025
               <br>
-              <a href="https://ieeexplore.ieee.org/document/10109823">[IEEE Xplore]</a>
+              <a href="https://ieeexplore.ieee.org/document/11053703">[IEEE Xplore]</a>
               /
-              <a href="images/BGAE_TKDE.pdf">[pdf]</a>
+              <a href="images/JetBGC.pdf">[pdf]</a>
               /
-              <a href="https://github.com/liliangnudt/Jet-BGC">[Code]</a>
+              <a href="https://github.com/liliangnudt/JetBGC">[Code]</a>
               <p></p>
               <p style="text-align:justify">
                 We revisit the consistency and specificity of LRP and LLP, and design a new unified structural fusion strategy to integrate both linear and locally linear
-structures from a global perspective.
+structures from a global perspective. We reveal that the proposed structural fusion strategy is a generalization of LLP under a newly defined η-norm.
               </p>
             </td>
           </tr>		
