--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@ structures from a global perspective. We reveal that the proposed structural fus
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 8.9</font>) </em>, 2024
               <br>
-              <a href="https://ieeexplore.ieee.org/document/9830658">[IEEE Xplore]</a>
+              <a href="https://ieeexplore.ieee.org/document/10645690/">[IEEE Xplore]</a>
               /
-              <a href="https://ieeexplore.ieee.org/document/10109823">[pdf]</a>
+              <a href="images/TFMKC.pdf">[pdf]</a>
               /
               <a href="https://github.com/liliangnudt/MVBGC-NFF">[Code]</a>
               <p></p>
@@ -426,7 +426,7 @@ structures from a global perspective. We reveal that the proposed structural fus
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/pdf/2202.12533">
-                <papertitle>Improved Dual Correlation Reduction Network</papertitle>
+                <papertitle>Improved Dual Correlation Reduction Network With Affinity Recovery</papertitle>
               </a>
               <br>
                 <a href="https://yueliu1999.github.io/">Yue Liu</a>,
@@ -441,7 +441,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               <br>
               <em>IEEE T-NNLS(<font color="red">CCF-B, IF: 8.9</font>)</em>, 2024
               <br>
-              <a href="https://arxiv.org/pdf/2202.12533">[IEEE Xplore]</a>
+              <a href="https://ieeexplore.ieee.org/document/10605097">[IEEE Xplore]</a>
               /
               <a href="https://arxiv.org/pdf/2202.12533">[pdf]</a>
               /
