--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@ structures from a global perspective. We reveal that the proposed structural fus
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
+		<li>Excellent Graduate Student, NUDT, 2025. </li>
 		<li>Outstanding Student of NUDT, 2024.</li>
 		<li>National Scholarship, 2024.</li>
 		<li>CSC Scholarship, 2023.</li>	    
@@ -617,7 +618,7 @@ structures from a global perspective. We reveal that the proposed structural fus
 		<li>First Prize of Postgraduate Academic Scholarship, 2020.</li>		    
 		<li>Postgraduate Scientific Research Innovation Project of Hunan Province (CX20200008, CX20200084), 2020.</li>
 		<li>Second Prize of "HUAWEI" the 16th China Post-Graduate Mathematical Contest in Modeling, 2019.</li>		    
-		<li>Excellent Graduated Graduate Student, HUST, 2018. </li>
+		<li>Excellent Undergraduate Student, HUST, 2018. </li>
 		<li>Recommendation for admission to NUDT, 2018. </li>
 	    </ul>
         </table>
