--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
+	  <li><b>[<font color="red">2025.06</font>]</b> One paper has been accepted by <span>IEEE TPAMI</span>.</li>
 	  <li><b>[<font color="red">2025.06</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> Awarded a Singapore Patent 🇸🇬.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> My visit at A*STAR has come to an end. I’m grateful to everyone! 🇸🇬.</li>
