--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
-	  <li><b>[<font color="red">2025.06</font>]</b> One paper has been accepted by <span>IEEE TPAMI</span>.</li>
+	  <li><b>[<font color="red">2025.08</font>]</b> One paper has been accepted by <span>IEEE TPAMI</span>.</li>
 	  <li><b>[<font color="red">2025.06</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> Awarded a Singapore Patent 🇸🇬.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> My visit at A*STAR has come to an end. I’m grateful to everyone! 🇸🇬.</li>
@@ -171,19 +171,21 @@
               <br>
               <strong>Liang Li</strong>,
 	      <a href="https://yuangang-pan.github.io/">Yuangang Pan</a>,	
-              <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
+	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/our-team/yao-yinghua/">Yinghua Yao</a>,
+              <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
+              <a href="https://lmomoy.github.io/">Moyun Liu</a>,
               <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>Preprint </em>, 2024
+              <em>IEEE TPAMI </em>, 2025
               <br>
               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
-              <a href="https://github.com/liliangnudt/G-DNO">Code</a>
+              <a href="https://github.com/liliangnudt/GProM">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a reinforced multi-view bipartite graph clustering.
+                We take the first time to propose a novel multi-view bipartite graph clustering framework based on probabilistic graphical model.
               </p>
             </td>
           </tr>	
