--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>IEEE TPAMI </em>, 2025
+              <em>IEEE TPAMI (<font color="red">CCF-A, IF: 18.6</font>) </em>, 2025
               <br>
               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
