--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
               <br>
               <em>IEEE TPAMI (<font color="red">CCF-A, IF: 18.6</font>) </em>, 2025
               <br>
+              <a href="https://ieeexplore.ieee.org/document/11119324">[IEEE Xplore]</a>
+			  /
               <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
               <a href="https://github.com/liliangnudt/GProM">Code</a>
@@ -214,7 +216,7 @@
               <br>
               <a href="https://ieeexplore.ieee.org/document/11053703">[IEEE Xplore]</a>
               /
-              <a href="images/JetBGC.pdf">[pdf]</a>
+              <a href="images/GProM.pdf">[pdf]</a>
               /
               <a href="https://github.com/liliangnudt/JetBGC">[Code]</a>
               <p></p>
