--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/preprint.jpg' width="160">
+<!--                 <img src='images/preprint.jpg' width="160"> -->
+                <img src='images/GProM.png' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ieeexplore.ieee.org/document/11119324">
                 <papertitle>Generalized Probabilistic Graphical Modeling for Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
@@ -199,7 +200,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ieeexplore.ieee.org/document/11053703">
                 <papertitle>Jet-BGC: Joint Latent Embedding and Structural Fusion Bipartite Graph Clustering</papertitle>
               </a>
               <br>
@@ -234,7 +235,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ieeexplore.ieee.org/document/10423800">
                 <papertitle>BGAE: Auto-encoding Multi-view Bipartite Graph Clustering</papertitle>
               </a>
               <br>
@@ -270,7 +271,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ieeexplore.ieee.org/document/10109823">
                 <papertitle>Multi-view Bipartite Graph Clustering with Coupled Noisy Feature Filter</papertitle>
               </a>
               <br>
@@ -373,7 +374,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ieeexplore.ieee.org/document/10645690/">
                 <papertitle>TFMKC: Tuning-free Multiple Kernel Clustering Coupled with Diverse Partition Fusion</papertitle>
               </a>
               <br>
@@ -430,7 +431,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2202.12533">
+              <a href="https://ieeexplore.ieee.org/document/10605097">
                 <papertitle>Improved Dual Correlation Reduction Network With Affinity Recovery</papertitle>
               </a>
               <br>
@@ -466,7 +467,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
+              <a href="https://ieeexplore.ieee.org/document/10163985">
                 <papertitle>Simple Contrastive Graph Clustering</papertitle>
               </a>
               <br>
@@ -502,7 +503,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26071">
                 <papertitle>Hard Sample Aware Network for Contrastive Deep Graph Clustering</papertitle>
               </a>
               <br>
@@ -538,7 +539,7 @@ structures from a global perspective. We reveal that the proposed structural fus
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2212.08665">
+              <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26333">
                 <papertitle>Let the data choose: Flexible and Diverse Anchor Graph Fusion for Scalable Multi-view Clustering</papertitle>
               </a>
               <br>
@@ -617,7 +618,7 @@ structures from a global perspective. We reveal that the proposed structural fus
 		<li>Outstanding Student of NUDT, 2024.</li>
 		<li>National Scholarship, 2024.</li>
 		<li>CSC Scholarship, 2023.</li>	    
-                <li>National Scholarship, 2022.</li>
+        <li>National Scholarship, 2022.</li>
 		<li>First Prize of Postgraduate Academic Scholarship, 2021.</li>
 		<li>National Scholarship, 2020.</li>
 		<li>First Prize of Postgraduate Academic Scholarship, 2020.</li>		    
