--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@ structures from a global perspective. We reveal that the proposed structural fus
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-            <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, Neurocomputing, DSP</li>
-            <li>Reviewer for ICML25, NeurIPS24/25, ICLR25, ACL25, KDD25, AITATS25-26, IJCAI25, ACM MM23-25, AAAI23-25, PRCV22</li>
+            <li>Reviewer for TPAMI, TKDE, JAIR, TNNLS, TBD, ACM TOMM, PR, Neurocomputing, DSP</li>
+            <li>Reviewer for ICML25, NeurIPS24/25, ICLR25-26, ACL25, KDD25, AITATS25-26, IJCAI25, ACM MM23-25, AAAI23-25, PRCV22</li>
             <li>Student member for IEEE, CSIG, CCF</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
