--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>News</heading>
         <ul>
+	  <li><b>[<font color="red">2026.02</font>]</b> One paper has been accepted by ICDE Poster Track.</li>
 	  <li><b>[<font color="red">2025.08</font>]</b> One paper has been accepted by <span>IEEE TPAMI</span>.</li>
 	  <li><b>[<font color="red">2025.06</font>]</b> One paper has been accepted by <span>IEEE TKDE</span>.</li>
 	  <li><b>[<font color="red">2025.03</font>]</b> Awarded a Singapore Patent 🇸🇬.</li>
@@ -213,7 +214,7 @@
 	      <a href="https://www.a-star.edu.sg/cfar/about-cfar/management/prof-ivor-tsang">Ivor W. Tsang</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
-              <em>IEEE TKDE (<font color="red">CCF-A, IF: 10.4</font>)</em>, 2025
+              <em>IEEE TKDE/ICDE Poster Track (<font color="red">CCF-A, IF: 10.4</font>)</em>, 2025
               <br>
               <a href="https://ieeexplore.ieee.org/document/11053703">[IEEE Xplore]</a>
               /
